force-app/main/default/objects/ShipmentEvent__mdt/ShipmentEvent__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type generated from CSV: C:\Users\aleksandr.novikov\DelivStatus\Event_new.csv</description>
    <label>ShipmentEvent</label>
    <pluralLabel>ShipmentEvents</pluralLabel>
</CustomObject>