force-app/main/default/objects/ShipmentEvent__mdt/fields/Code__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>