force-app/main/default/objects/ShipmentEvent__mdt/fields/DefaultStatus__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>DefaultStatus__c</fullName>
    <label>DefaultStatus</label>
    <type>Text</type>
    <length>255</length>
</CustomField>