force-app/main/default/objects/ShipmentEvent__mdt/fields/Name__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>