force-app/main/default/objects/ShipmentEvent__mdt/fields/ShipmentEvent__c.field-meta.xml
<CustomField>
    <fullName>ShipmentEvent__c</fullName>
    <label>ShipmentEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>